--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "blackjack-js",
   "version": "1.0.0",
   "description": "Online BlackJack ",
-  "main": "./output/server-min.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./output/server-min.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
