--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "socket.io": "^2.1.1"
   },
   "dependencies": {
-    "gulp-htmlmin": "^5.0.1"
+    "socket.io": "^2.1.1",
+    "express": "^4.16.4"
   }
 }
